Prima parte del main

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
     <title> The Booleaner </title>
 </head>
 <body>
+
+    <!-- Intestazione -->
     <header>
         <img src="/assets/img/logo.svg" alt="Logo Booleaner">
     </header>
-    <main></main>
+    <main>
+    <!-- Parte iniziale con Titolo e immagini -->
+        <section id="first-part">
+            <h1> Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim Berners-Lee</h1>
+        </section>
+        <section></section>
+        <section></section>
+    </main>
     <footer></footer>
 </body>
 </html>
