Aggiunto e stilizzato titolo e sottotitolo

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <!-- Parte iniziale con Titolo e immagini -->
         <section id="first-part">
             <h1> Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim Berners-Lee</h1>
+            <p>Scritto da <span class="author">The Booleaner</span></p>
         </section>
         <section></section>
         <section></section>
