Ho inserito le immagini

--- a/index.html
+++ b/index.html
@@ -18,8 +18,12 @@
         <section id="first-part">
             <h1> Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim Berners-Lee</h1>
             <p>Scritto da <span class="author">The Booleaner</span></p>
+            <div class="date"> il 12/09/2022</div>
         </section>
-        <section></section>
+        <section id="images-part">
+            <img src="/assets/img/tim-1.jpg" alt="Tim Berners-Lee Mentre tiene un discorso">
+            <img src="/assets/img/tim-2.jpg" alt="Immagine di Tim Berners-Lee in una cattedrale">
+        </section>
         <section></section>
     </main>
     <footer></footer>
