--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <section id="images-part">
             <img src="/assets/img/tim-1.jpg" alt="Tim Berners-Lee Mentre tiene un discorso">
             <img src="/assets/img/tim-2.jpg" alt="Immagine di Tim Berners-Lee in una cattedrale">
+            <div class="photo-caption">
+                <p><em>1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</em></p>
+            </div>
+            <p><em>2nd Photo: Wikimedia, by Paul Clarke</em></p>
         </section>
         <section></section>
     </main>
