Aggiunto e stilizzato primo paragrafo

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
                 <p><em>1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</em></p>
             </div>
             <p><em>2nd Photo: Wikimedia, by Paul Clarke</em></p>
+            <br>
+            <p class="first-paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore <mark>ducimus facere harum reprehenderit beatae nostrum nemo</mark>  repellat deleniti possimus voluptas accusantium. Magni!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore
+            exercitationem ducimus facere harum reprehenderit beatae nostrum nemo repellat deleniti possimus voluptas accusantium.
+            Magni!</p>
+            <br>
+            
         </section>
         <section></section>
     </main>
