Aggiunta lista di elenchi

--- a/index.html
+++ b/index.html
@@ -32,7 +32,18 @@
             exercitationem ducimus facere harum reprehenderit beatae nostrum nemo repellat deleniti possimus voluptas accusantium.
             Magni!</p>
             <br>
-            
+            <ul>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
+                facere harum
+                </li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
+                facere harum 
+                </li>
+                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
+                facere harum 
+                </li>
+            </ul>
+            <br>
         </section>
         <section></section>
     </main>
