Creato e stilizzato parzialmente tabella

--- a/index.html
+++ b/index.html
@@ -20,18 +20,27 @@
             <p>Scritto da <span class="author">The Booleaner</span></p>
             <div class="date"> il 12/09/2022</div>
         </section>
+
         <section id="images-part">
+
             <img src="/assets/img/tim-1.jpg" alt="Tim Berners-Lee Mentre tiene un discorso">
+
             <img src="/assets/img/tim-2.jpg" alt="Immagine di Tim Berners-Lee in una cattedrale">
+
             <div class="photo-caption">
                 <p><em>1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</em></p>
             </div>
+
             <p><em>2nd Photo: Wikimedia, by Paul Clarke</em></p>
+
             <br>
+
             <p class="first-paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore <mark>ducimus facere harum reprehenderit beatae nostrum nemo</mark>  repellat deleniti possimus voluptas accusantium. Magni!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore
             exercitationem ducimus facere harum reprehenderit beatae nostrum nemo repellat deleniti possimus voluptas accusantium.
             Magni!</p>
+
             <br>
+
             <ul>
                 <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
                 facere harum
@@ -43,9 +52,42 @@
                 facere harum 
                 </li>
             </ul>
+
             <br>
+
         </section>
-        <section></section>
+<!-- Corpo tabella -->
+        <section id="table-part">
+            <table>
+                <thead>
+                    <tr>
+                        <th>Lorem Ipsum Dolor</th>
+                        <th>Lorem Ipsum Dolor</th>
+                        <th>Lorem Ipsum Dolor</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
+                        facere harum</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
+                        facere harum</td>
+                    </tr>
+                    <tr>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem Ipsum Dolor</td>
+                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
+                        facere harum</td>
+                    </tr>
+                </tbody>
+            </table>
+        </section>
     </main>
     <footer></footer>
 </body>
