Terminato tabella e iniziato footer

--- a/index.html
+++ b/index.html
@@ -67,28 +67,35 @@
                     </tr>
                 </thead>
                 <tbody>
-                    <tr>
-                        <td>Lorem Ipsum Dolor</td>
-                        <td>Lorem Ipsum Dolor</td>
-                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
+                    <tr id="first-row">
+                        <td class="first-column">Lorem Ipsum Dolor</td>
+                        <td class="second-column">Lorem Ipsum Dolor</td>
+                        <td class="third-column">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
                         facere harum</td>
                     </tr>
                     <tr>
-                        <td>Lorem Ipsum Dolor</td>
-                        <td>Lorem Ipsum Dolor</td>
+                        <td class="first-column">Lorem Ipsum Dolor</td>
+                        <td class="second-column">Lorem Ipsum Dolor</td>
                         <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
                         facere harum</td>
                     </tr>
-                    <tr>
-                        <td>Lorem Ipsum Dolor</td>
-                        <td>Lorem Ipsum Dolor</td>
+                    <tr id="third-row">
+                        <td class="first-column">Lorem Ipsum Dolor</td>
+                        <td class="second-column">Lorem Ipsum Dolor</td>
                         <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
                         facere harum</td>
                     </tr>
                 </tbody>
             </table>
         </section>
+        <br>
+        <br>
     </main>
-    <footer></footer>
+    <footer>
+        <p class="more">Potrebbero Interessarti</p>
+        <div class="first-image">
+            <p>Lorem Ipsum Dolor</p>
+        </div>
+    </footer>
 </body>
 </html>
