--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- Intestazione -->
     <header>
-        <img src="/assets/img/logo.svg" alt="Logo Booleaner">
+        <img class="logo" src="/assets/img/logo.svg" alt="Logo Booleaner">
     </header>
     <main>
     <!-- Parte iniziale con Titolo e immagini -->
@@ -94,7 +94,11 @@
     <footer>
         <p class="more">Potrebbero Interessarti</p>
         <div class="first-image">
-            <p>Lorem Ipsum Dolor</p>
+            <h3>Lorem Ipsum Dolor</h3>
+        </div>
+
+        <div class="second-image">
+            <h3>Lorem Ipsum Dolor</h3>
         </div>
     </footer>
 </body>
