Sistemato piccoli problemi con la tabella

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Lorem Ipsum Dolor</th>
-                        <th>Lorem Ipsum Dolor</th>
-                        <th>Lorem Ipsum Dolor</th>
+                        <th id="left-row">Lorem Ipsum Dolor</th>
+                        <th id="center-row">Lorem Ipsum Dolor</th>
+                        <th id="right-row">Lorem Ipsum Dolor</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -91,6 +91,8 @@
         <br>
         <br>
     </main>
+
+    <!-- Parte finale -->
     <footer>
         <p class="more">Potrebbero Interessarti</p>
         <div class="first-image">
