Aggiunto ultimo paragrafo sotto la tabella e terminato il lavoro

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <h1> Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim Berners-Lee</h1>
             <p>Scritto da <span class="author">The Booleaner</span></p>
             <div class="date"> il 12/09/2022</div>
+            <br>
         </section>
 
         <section id="images-part">
@@ -87,6 +88,10 @@
                     </tr>
                 </tbody>
             </table>
+
+            <p class="second-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsam excepturi magnam, est necessitatibus ab deleniti sit quaerat explicabo voluptatibus ratione beatae quibusdam perspiciatis nisi similique voluptatum. Officiis, ex ea.Lorem ipsum dolor sit amet consectetur <mark>adipisicing elit. Sunt ipsam excepturi magnam, est necessitatibus ab deleniti</mark> sit
+            quaerat explicabo voluptatibus ratione beatae quibusdam perspiciatis nisi similique voluptatum. Officiis, ex ea.Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsam excepturi magnam, est necessitatibus ab deleniti sit
+            quaerat explicabo voluptatibus ratione beatae quibusdam perspiciatis nisi similique voluptatum. Officiis, ex ea.</p>
         </section>
         <br>
         <br>
