Sistemato immagini di Lee

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
         <section id="images-part">
 
-            <img src="/assets/img/tim-1.jpg" alt="Tim Berners-Lee Mentre tiene un discorso">
+            <img class="lee-image-1" src="/assets/img/tim-1.jpg" alt="Tim Berners-Lee Mentre tiene un discorso">
 
-            <img src="/assets/img/tim-2.jpg" alt="Immagine di Tim Berners-Lee in una cattedrale">
+            <img class="lee-image-2"src="/assets/img/tim-2.jpg" alt="Immagine di Tim Berners-Lee in una cattedrale">
 
             <div class="photo-caption">
                 <p><em>1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</em></p>
