Aggiustato posizionamento logo

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
 
     <!-- Intestazione -->
     <header>
-        <img class="logo" src="/assets/img/logo.svg" alt="Logo Booleaner">
+        <div class="container">
+            <img class="logo" src="/assets/img/logo.svg" alt="Logo Booleaner">
+        </div>
+        
     </header>
     <main>
     <!-- Parte iniziale con Titolo e immagini -->
