--- a/index.html
+++ b/index.html
@@ -1,115 +1,159 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/assets/css/style.css">
-    <title> The Booleaner </title>
-</head>
-<body>
-
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <title>The Booleaner!!</title>
+  </head>
+  <body>
     <!-- Intestazione -->
     <header>
-        <div class="container">
-            <img class="logo" src="/assets/img/logo.svg" alt="Logo Booleaner">
-        </div>
-        
+      <div class="container">
+        <img class="logo" src="./assets/img/logo.svg" alt="Logo Booleaner" />
+      </div>
     </header>
     <main>
-    <!-- Parte iniziale con Titolo e immagini -->
-        <section id="first-part">
-            <h1> Internet deve essere al servizio del "bene pubblico": Il manifesto di Tim Berners-Lee</h1>
-            <p>Scritto da <span class="author">The Booleaner</span></p>
-            <div class="date"> il 12/09/2022</div>
-            <br>
-        </section>
+      <!-- Parte iniziale con Titolo e immagini -->
+      <section id="first-part">
+        <h1>
+          Internet deve essere al servizio del "bene pubblico": Il manifesto di
+          Tim Berners-Lee
+        </h1>
+        <p>Scritto da <span class="author">The Booleaner</span></p>
+        <div class="date">il 12/09/2022</div>
+        <br />
+      </section>
 
-        <section id="images-part">
+      <section id="images-part">
+        <img
+          class="lee-image-1"
+          src="./assets/img/tim-1.jpg"
+          alt="Tim Berners-Lee Mentre tiene un discorso"
+        />
 
-            <img class="lee-image-1" src="/assets/img/tim-1.jpg" alt="Tim Berners-Lee Mentre tiene un discorso">
+        <img
+          class="lee-image-2"
+          src="./assets/img/tim-2.jpg"
+          alt="Immagine di Tim Berners-Lee in una cattedrale"
+        />
 
-            <img class="lee-image-2"src="/assets/img/tim-2.jpg" alt="Immagine di Tim Berners-Lee in una cattedrale">
+        <div class="photo-caption">
+          <p>
+            <em
+              >1st Photo: John S. and James L.Knight Foundation, by Scott
+              Henrichsen</em
+            >
+          </p>
+        </div>
 
-            <div class="photo-caption">
-                <p><em>1st Photo: John S. and James L.Knight Foundation, by Scott Henrichsen</em></p>
-            </div>
+        <p><em>2nd Photo: Wikimedia, by Paul Clarke</em></p>
 
-            <p><em>2nd Photo: Wikimedia, by Paul Clarke</em></p>
+        <br />
 
-            <br>
+        <p class="first-paragraph">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident
+          commodi quis quidem earum, optio quas dolore
+          <mark>ducimus facere harum reprehenderit beatae nostrum nemo</mark>
+          repellat deleniti possimus voluptas accusantium. Magni!Lorem, ipsum
+          dolor sit amet consectetur adipisicing elit. Provident commodi quis
+          quidem earum, optio quas dolore exercitationem ducimus facere harum
+          reprehenderit beatae nostrum nemo repellat deleniti possimus voluptas
+          accusantium. Magni!
+        </p>
 
-            <p class="first-paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore <mark>ducimus facere harum reprehenderit beatae nostrum nemo</mark>  repellat deleniti possimus voluptas accusantium. Magni!Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore
-            exercitationem ducimus facere harum reprehenderit beatae nostrum nemo repellat deleniti possimus voluptas accusantium.
-            Magni!</p>
+        <br />
 
-            <br>
+        <ul>
+          <li>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident
+            commodi quis quidem earum, optio quas dolore ducimus facere harum
+          </li>
+          <li>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident
+            commodi quis quidem earum, optio quas dolore ducimus facere harum
+          </li>
+          <li>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident
+            commodi quis quidem earum, optio quas dolore ducimus facere harum
+          </li>
+        </ul>
 
-            <ul>
-                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
+        <br />
+      </section>
+      <!-- Corpo tabella -->
+      <section id="table-part">
+        <table>
+          <thead>
+            <tr>
+              <th id="left-row">Lorem Ipsum Dolor</th>
+              <th id="center-row">Lorem Ipsum Dolor</th>
+              <th id="right-row">Lorem Ipsum Dolor</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr id="first-row">
+              <td class="first-column">Lorem Ipsum Dolor</td>
+              <td class="second-column">Lorem Ipsum Dolor</td>
+              <td class="third-column">
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Provident commodi quis quidem earum, optio quas dolore ducimus
                 facere harum
-                </li>
-                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
-                facere harum 
-                </li>
-                <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
-                facere harum 
-                </li>
-            </ul>
+              </td>
+            </tr>
+            <tr>
+              <td class="first-column">Lorem Ipsum Dolor</td>
+              <td class="second-column">Lorem Ipsum Dolor</td>
+              <td>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Provident commodi quis quidem earum, optio quas dolore ducimus
+                facere harum
+              </td>
+            </tr>
+            <tr id="third-row">
+              <td class="first-column">Lorem Ipsum Dolor</td>
+              <td class="second-column">Lorem Ipsum Dolor</td>
+              <td>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                Provident commodi quis quidem earum, optio quas dolore ducimus
+                facere harum
+              </td>
+            </tr>
+          </tbody>
+        </table>
 
-            <br>
-
-        </section>
-<!-- Corpo tabella -->
-        <section id="table-part">
-            <table>
-                <thead>
-                    <tr>
-                        <th id="left-row">Lorem Ipsum Dolor</th>
-                        <th id="center-row">Lorem Ipsum Dolor</th>
-                        <th id="right-row">Lorem Ipsum Dolor</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr id="first-row">
-                        <td class="first-column">Lorem Ipsum Dolor</td>
-                        <td class="second-column">Lorem Ipsum Dolor</td>
-                        <td class="third-column">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
-                        facere harum</td>
-                    </tr>
-                    <tr>
-                        <td class="first-column">Lorem Ipsum Dolor</td>
-                        <td class="second-column">Lorem Ipsum Dolor</td>
-                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
-                        facere harum</td>
-                    </tr>
-                    <tr id="third-row">
-                        <td class="first-column">Lorem Ipsum Dolor</td>
-                        <td class="second-column">Lorem Ipsum Dolor</td>
-                        <td>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Provident commodi quis quidem earum, optio quas dolore ducimus
-                        facere harum</td>
-                    </tr>
-                </tbody>
-            </table>
-
-            <p class="second-paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsam excepturi magnam, est necessitatibus ab deleniti sit quaerat explicabo voluptatibus ratione beatae quibusdam perspiciatis nisi similique voluptatum. Officiis, ex ea.Lorem ipsum dolor sit amet consectetur <mark>adipisicing elit. Sunt ipsam excepturi magnam, est necessitatibus ab deleniti</mark> sit
-            quaerat explicabo voluptatibus ratione beatae quibusdam perspiciatis nisi similique voluptatum. Officiis, ex ea.Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsam excepturi magnam, est necessitatibus ab deleniti sit
-            quaerat explicabo voluptatibus ratione beatae quibusdam perspiciatis nisi similique voluptatum. Officiis, ex ea.</p>
-        </section>
-        <br>
-        <br>
+        <p class="second-paragraph">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt ipsam
+          excepturi magnam, est necessitatibus ab deleniti sit quaerat explicabo
+          voluptatibus ratione beatae quibusdam perspiciatis nisi similique
+          voluptatum. Officiis, ex ea.Lorem ipsum dolor sit amet consectetur
+          <mark
+            >adipisicing elit. Sunt ipsam excepturi magnam, est necessitatibus
+            ab deleniti</mark
+          >
+          sit quaerat explicabo voluptatibus ratione beatae quibusdam
+          perspiciatis nisi similique voluptatum. Officiis, ex ea.Lorem ipsum
+          dolor sit amet consectetur adipisicing elit. Sunt ipsam excepturi
+          magnam, est necessitatibus ab deleniti sit quaerat explicabo
+          voluptatibus ratione beatae quibusdam perspiciatis nisi similique
+          voluptatum. Officiis, ex ea.
+        </p>
+      </section>
+      <br />
+      <br />
     </main>
 
     <!-- Parte finale -->
     <footer>
-        <p class="more">Potrebbero Interessarti</p>
-        <div class="first-image">
-            <h3>Lorem Ipsum Dolor</h3>
-        </div>
+      <p class="more">Potrebbero Interessarti</p>
+      <div class="first-image">
+        <h3>Lorem Ipsum Dolor</h3>
+      </div>
 
-        <div class="second-image">
-            <h3>Lorem Ipsum Dolor</h3>
-        </div>
+      <div class="second-image">
+        <h3>Lorem Ipsum Dolor</h3>
+      </div>
     </footer>
-</body>
+  </body>
 </html>
